add img in profile

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,5 +43,6 @@
     <string name="skip_btn">Bỏ qua</string>
     <string name="next_btn">Tiếp theo</string>
     <string name="started">Bắt đầu</string>
+    <string name="caidat">Cài Đặt</string>
 
 </resources>
