--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,5 +44,6 @@
     <string name="next_btn">Tiếp theo</string>
     <string name="started">Bắt đầu</string>
     <string name="caidat">Cài Đặt</string>
+    <string name="title_activity_maps">MapsActivity</string>
 
 </resources>
