--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,5 +45,6 @@
     <string name="started">Bắt đầu</string>
     <string name="caidat">Cài Đặt</string>
     <string name="title_activity_maps">MapsActivity</string>
+    <string name="title_activity_tracking_order">TrackingOrder</string>
 
 </resources>
