Thien da add duoc qr vao

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">FindFood</string>
     <string name="facebookLink">Khi chọn Đăng Ký, bạn đồng ý với <a href="https://www.facebook.com/dthien232/">Điều khoản sử dụng </a> và <a href="https://www.instagram.com/bdthien232__/">Chính sách bảo mật </a> của FindFood</string>
     <string name="dangNhapThanhCong">Đăng nhập thành "CONG" :)</string>
-    <string name="taoBoi">Từ nhóm <b>AAHT</b></string>
+    <string name="taoBoi">Từ nhóm <b>T3HQ</b></string>
     <string name="phienban">Version</string>
     <string name="dangtai">Loading...</string>
     <string name="taikhoan">Tài Khoản</string>
